algunos cambios de css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     </h3>
 
-    <input id="nombre-del-jugador" type="text" placeholder="Ingresa tu nombre">
+    <input id="nombreju" type="text" placeholder="Ingresa tu nombre">
 
     <div>
         <button id="irapantalla2">Comenzar</button>
@@ -66,12 +66,42 @@
 
 
 
+</section>
+
+<section class="pantallas" id="pantalla3">
+
 
 
 
 
 
 </section>
+
+<section class="pantallas" id="pantalla4">
+
+
+
+
+</section>
+
+<script>
+
+var nombre = document.getElementById("nombre");
+var info = document.getElementById("nombreju").value;
+var boton1 = document.getElementById("irpantalla2");
+
+boton1.onclick = function(){
+console.log(info)
+}
+
+
+
+
+
+
+
+
+</script>
 
 </body>
 </html>
