--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2>Bienvenido, te desafiamos a ganar nuestro juego</h2>
 
     <h3>
-        Tenes una bomba, 10 cables y 60 segundos para desavtivarla.<br>
+        Tenes una bomba, 10 cables y 60 segundos para desactivarla.<br>
         Cada cable erroneo que cortes te restara 10 segundos de tiempo.<br>
         Tenes que desactivar 3 bombas para ganar.<br>
         Estas listo?
