--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     
 <header id="nombre"></header>
 
-<section class="pantallas" id="pantalla1">
+<section class="pantallas" id="pantalla1" style="background-image: url(./multimedia/fondo.jpg);">
+    <audio src="./multimedia/musica-fondo-pantalla-1.m4a" type="audio/mpeg" autoplay="autoplay" loop="loop"></audio>
 
 <img id="titulo" src="multimedia/titulo22.png">
 <div id="centrar">
