--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ for(i=0;i<cables.length; i++){
     }
     else{
         if(cables[i].getAttribute("class")!="cables"){
-            
+            //funcion de ganar aun no definida
     }
 }
 }
