--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ function cableincorrecto () {
             clearInterval(intervalo2);
              intervalo2 = setInterval(function(){
                 divcuentaregresiva.innerHTML = resta;
-                if(resta !== 0){
+                if(resta > 0){
                     resta --;
                 }
             }, 1000);
