--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     
 <header id="nombre"></header>
 
-<section class="pantallas" id="pantalla1">
-    <audio src="./multimedia/musica-fondo-pantalla-1.m4a" type="audio/mpeg" autoplay="autoplay" loop="loop"></audio>
-
+<section class="pantallas" id="pantalla1" >
+<audio src="./multimedia/musica-fondo-pantalla-1.m4a" type="audio/mpeg" autoplay="autoplay" loop="loop"></audio>
+<img id="fondo" src="./multimedia/fondo.jpg">
 <img id="titulo" src="multimedia/titulo22.png">
 <div id="centrar">
     <h2>Bienvenido, te desafiamos a ganar nuestro juego</h2>
@@ -100,14 +100,22 @@ var nombre = document.getElementById("nombre");
 var info = document.getElementById("nombreju");
 var boton1 = document.getElementById("irapantalla2");
 
+//funciones mostrar pantalla 2
+function mostrarPantalla1(){
+			document.querySelector("#pantalla1").style.display = "none";
+			document.querySelector("#pantalla2").style.display = "block";
+		}
+
 //que el boton comenzar ponga header, vacie input y lleve a pantalla2
 boton1.onclick = function(){
 nombre.innerHTML = info.value;   //ponemos nombre del input en el header
 info.value="";                   // para que despues de ingresar el nombre vuelva a vaciarse el input
-                               // hay que agregar funcion para que lleve a pantalla 2
+mostrarPantalla1();                               // hay que agregar funcion para que lleve a pantalla 2
 
 
 }
+
+
 
 //pantalla2
 
