--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Bomba de tiempo</title>
 </head>
 
-<body id="fondo" style="background-image: url(./multimedia/fondo.jpg);">
+<body>
     
 <header id="nombre"></header>
 
