--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <img id="winner" src="multimedia/winner-text.png">
 
-    <p id="texto">¡Muy bien! ¡Lograste el objetivo!</p>
+    <button id="jugardenuevo2">Jugar de nuevo</button>
 
     <img id="copa" src="multimedia/copa.png">
     
