--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@ for(i=0;i<cables.length; i++){
 }
 }
 
+//pantalla 3 looser
 //funcion para que el boton jugar de nuevo lleve a pantalla1 para jugar de nuevo despues de perder
 function mostrarPantalla1(){
             document.querySelector("#pantalla1").style.display = "block";
@@ -239,6 +240,10 @@ function mostrarPantalla1(){
     mostrarPantalla1();
  }
 
+ //pantalla 4 winer
+ //fincion para el boton
+
+ 
 
 </script>
 
