--- a/index.html
+++ b/index.html
@@ -241,9 +241,13 @@ function mostrarPantalla1(){
  }
 
  //pantalla 4 winer
- //fincion para el boton
+ //funcion para el boton
 
- 
+ var btnjugardenuevo2 = document.getElementById("jugardenuevo2");
+
+ btnjugardenuevo2.onclick = function () {
+    mostrarPantalla1 ();
+ }
 
 </script>
 
