--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ function mostrarPantalla2(){
 			document.querySelector("#pantalla1").style.display = "none";
 			document.querySelector("#pantalla2").style.display = "block";
             document.querySelector("#pantalla3").style.display = "none";
+            document.querySelector("#pantalla4").style.display = "none";
 		}
 
 //que el boton comenzar ponga header, vacie input y lleve a pantalla2
