--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <img id="fondo" src="./multimedia/fondo-tenebroso.png">
 <img id="titulo" src="multimedia/bomba-de-tiempo-text.png">
 <div id="centrar">
+
     <h2>¡Bienvenido! Te desafiamos a ganar nuestro juego</h2>
 
     <h3>
@@ -31,12 +32,14 @@
     <div>
         <button id="irapantalla2">Comenzar</button>
     </div>
+
 </div>
 
 </section>
 
 <section class="pantallas" id="pantalla2">
 
+<img id="fondo2" src="multimedia/fondo-oscuro.jpeg">
 <img id="bombita" src="multimedia/bomba.png">
 <div><span>Cantidad de bombas desactivadas: <div id="cantbombas">0</div></span></div>
 
