--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ function mostrarPantalla1(){
  //fincion para el boton
 
 if(divcuentaregresiva.innerHTML==0){
-    //pasar a pantalla perdiste
+    //ANTO AGREGALE LA FUNCION DE PASAR A PANTALLA PERDEDOR
 }
 var desactivaBomba;
 function reiniciocable(){
