--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <section class="pantallas" id="pantalla2">
     
-<img id="bombita" src="multimedia/bomba.png">
+<img id="bombita" src="multimedia/bombita.png">
 <div><span>Cantidad de bombas desactivadas: <div id="cantbombas">0</div></span></div>
 
 <div>
@@ -52,7 +52,7 @@
         <button id="activarbomba">Activar Bomba</button>
        
         </div>
-        <img src="multimedia/bomba-central.png" id="bombadetiempo">
+        <img src="multimedia/bomba.png" id="bombadetiempo">
 </div>
 
 <div class="contenedorcables">
