--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <section class="pantallas" id="pantalla1">
  
 <img id="titulo" src="multimedia/bomba-de-tiempo-text.png">
+
 <div id="centrar">
 
     <h2>¡Bienvenido! Te desafiamos a ganar nuestro juego</h2>
@@ -43,7 +44,7 @@
 <section class="pantallas" id="pantalla2">
     
 <img id="bombita" src="multimedia/bombita.png">
-<div><span>Cantidad de bombas desactivadas: <div id="cantbombas">0</div></span></div>
+<div id="cantbombas">0</div>
 
 <div>
     <div id="contenedor-de-tiempo">
